2001-06-06  Nick Clifton  <nickc@cambridge.redhat.com>

	* as.c (show_usage): Remove L from listing options.  It is not a
	generic option.

2001-06-06  Tracy Kuhrt <Tracy.Kuhrt@microchip.com>

	* as.c (parse_args): Correct option name "listing-lhs-width2".

2001-05-30  Richard Henderson  <rth@redhat.com>

	* read.c (emit_leb128_expr): Call md_cons_align.

2001-05-28  Jeff Sturm  <jsturm@one-point.com>

	* config/tc-sparc.c (md_apply_fix3): Handle BFD_RELOC_SPARC_UA16,
	BFD_RELOC_SPARC_UA32 and BFD_RELOC_SPARC_UA64.
	(tc_gen_reloc): Likewise.
	(sparc_cons_align): Don't clear sparc_no_align_cons.
	(cons_fix_new_sparc): Substitute BFD_RELOC_SPARC_UA{16|32|64} for 
	BFD_RELOC_{16|32|64} iff sparc_no_align_cons is set.

2001-05-23  Alan Modra  <amodra@one.net.au>

	Merge from mainline.
	2001-05-22  Alan Modra  <amodra@one.net.au>
	* config/tc-arc.c (md_assemble): Use is_end_of_line instead of
	testing for NULs.

	2001-05-16  Alan Modra  <amodra@one.net.au>
	* config/tc-arc.c (md_assemble): Correct dwarf2_emit_insn param
	for 8 byte insns.
	* config/tc-i386.c (md_assemble): Call dwarf2_emit_insn before
	opcodes are output rather than after.  Delete insn_size.
	* config/tc-v850.c (md_assemble): Similarly, but delete
	total_insn_size.  Update copyright.

	2001-05-03  Alan Modra  <amodra@one.net.au>
	* config/tc-i386.c (i386_displacement): Call as_bad for bad GOTOFF
	expressions rather than triggering an assert.

	2001-03-30  Alan Modra  <alan@linuxcare.com.au>
	* config/tc-i386.c (UNCOND_JUMP, COND_JUMP, COND_JUMP86): Decrement.
	(md_relax_table): Remove first four unused entries.  Increment
	rlx_length by one throughout table, and update comments to suit.
	(md_estimate_size_before_relax): Return size of current variable
	part of frag to reflect reality when relaxing more than once.

	2001-03-25  Alan Modra  <alan@linuxcare.com.au>
	* config/tc-i386.c (i386_scale): Accept an absolute expression for
	scale factor, and return the end of the expression.